--- a/Minis.csproj
+++ b/Minis.csproj
@@ -86,6 +86,11 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="Records.cs" />
     <Compile Include="Resolver.cs" />
     <Compile Include="setSizeForm.cs">
@@ -96,7 +101,7 @@
     </Compile>
     <Compile Include="showBoxes.cs" />
     <Compile Include="CreateLoadDbForm.cs">
-      <SubType>Component</SubType>
+      <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="CreateLoadDbForm.Designer.cs">
       <DependentUpon>CreateLoadDbForm.cs</DependentUpon>
@@ -124,10 +129,21 @@
       <SubType>Designer</SubType>
       <DependentUpon>MainContainer.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <SubType>Designer</SubType>
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="setSizeForm.resx">
       <SubType>Designer</SubType>
       <DependentUpon>setSizeForm.cs</DependentUpon>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="bigIcon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="icon.png" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSHARP.Targets" />
   <ProjectExtensions>
