--- a/Minis.csproj
+++ b/Minis.csproj
@@ -76,7 +76,7 @@
       <DependentUpon>DatabaseWindow.cs</DependentUpon>
     </Compile>
     <Compile Include="GridPanel.cs">
-      <SubType>Component</SubType>
+      <SubType>Form</SubType>
     </Compile>
     <Compile Include="GridPanel.Designer.cs">
       <DependentUpon>GridPanel.cs</DependentUpon>
@@ -93,9 +93,6 @@
     <Compile Include="MainContainer.Designer.cs">
       <DependentUpon>MainContainer.cs</DependentUpon>
     </Compile>
-    <Compile Include="MyToolStrip.cs">
-      <SubType>Component</SubType>
-    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
@@ -104,7 +101,14 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="Records.cs" />
+    <Compile Include="RecordsManager.cs" />
     <Compile Include="Resolver.cs" />
+    <Compile Include="SelectContent.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="SelectContent.Designer.cs">
+      <DependentUpon>SelectContent.cs</DependentUpon>
+    </Compile>
     <Compile Include="setSizeForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -164,6 +168,10 @@
       <SubType>Designer</SubType>
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SelectContent.resx">
+      <SubType>Designer</SubType>
+      <DependentUpon>SelectContent.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="setSizeForm.resx">
       <SubType>Designer</SubType>
