--- a/trunk/Minis.csproj
+++ b/trunk/Minis.csproj
@@ -76,7 +76,7 @@
       <DependentUpon>DatabaseWindow.cs</DependentUpon>
     </Compile>
     <Compile Include="GridPanel.cs">
-      <SubType>Form</SubType>
+      <SubType>Component</SubType>
     </Compile>
     <Compile Include="GridPanel.Designer.cs">
       <DependentUpon>GridPanel.cs</DependentUpon>
