--- a/trunk/Minis.csproj
+++ b/trunk/Minis.csproj
@@ -69,7 +69,7 @@
       <DependentUpon>DisplayPanel.cs</DependentUpon>
     </Compile>
     <Compile Include="Events.cs" />
-    <Compile Include="Files.cs" />
+    <Compile Include="Misc.cs" />
     <Compile Include="DatabaseWindow.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -77,7 +77,7 @@
       <DependentUpon>DatabaseWindow.cs</DependentUpon>
     </Compile>
     <Compile Include="GridPanel.cs">
-      <SubType>Component</SubType>
+      <SubType>Form</SubType>
     </Compile>
     <Compile Include="GridPanel.Designer.cs">
       <DependentUpon>GridPanel.cs</DependentUpon>
