--- a/MiniDatabase/MiniDatabase.csproj
+++ b/MiniDatabase/MiniDatabase.csproj
@@ -108,6 +108,7 @@
     <Compile Include="CreateFields\CreateFieldText.xaml.cs">
       <DependentUpon>CreateFieldText.xaml</DependentUpon>
     </Compile>
+    <Compile Include="EnumBank.cs" />
     <Compile Include="Misc\NumericUpDown.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
