Added corresponding two more pages

--- a/MiniDatabase/MiniDatabase.csproj
+++ b/MiniDatabase/MiniDatabase.csproj
@@ -90,6 +90,14 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Content\Detail.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Content\Results.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="CreateFields\CreateFieldEnum.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -122,6 +130,12 @@
     </Compile>
     <Compile Include="Content\CreateEnums.xaml.cs">
       <DependentUpon>CreateEnums.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Content\Detail.xaml.cs">
+      <DependentUpon>Detail.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Content\Results.xaml.cs">
+      <DependentUpon>Results.xaml</DependentUpon>
     </Compile>
     <Compile Include="CreateFields\CreateFieldEnum.xaml.cs">
       <DependentUpon>CreateFieldEnum.xaml</DependentUpon>
@@ -171,7 +185,9 @@
   <ItemGroup>
     <Resource Include="Docs\todo.txt" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="SearchEngine\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
